swagger for getting  links
